# NahidaNotes

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  nahidanotes.cpp  nahidanotes.h  nahidanotes.ui
.github/workflows/: windows_release.yml
